--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "rxjs": "^7.2.0",
     "tailwindcss": "^3.2.1",
     "webpack-bundle-analyzer": "^4.5.0"
+  },
+  "dependencies": {
+    "@adyen/adyen-web": "^5.65.0",
+    "@adyen/api-library": "^17.0.0",
+    "swr": "^2.2.5"
   }
 }
