--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "extensions/*"
   ],
   "scripts": {
-    "dev": "evershop dev",
+    "dev": "NODE_OPTIONS='--inspect' evershop dev",
     "setup": "evershop install",
     "build": "evershop build",
     "start": "evershop start",
