--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "tailwindcss": "^3.2.1",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "googleapis": "128.0.0"
   },
   "dependencies": {
     "@adyen/adyen-web": "^5.65.0",
