--- a/extensions/facebook_login/package.json
+++ b/extensions/facebook_login/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "1.7.2",
+    "jsonwebtoken": "9.0.2",
     "jwks-rsa": "^3.1.0"
   }
 }
