--- a/.github/workflows/upload_ecr.yml
+++ b/.github/workflows/upload_ecr.yml
@@ -6,6 +6,7 @@ on:
     branches: [master, develop]
 env:
   ECR_REPOSITORY: ${{ vars.AWS_ECR_REPO }}
+  ENV_S3_CONFIG: "${{github.ref == 'refs/heads/master' && 'production' || 'dev'}}"
 jobs:
   build:
     name: Build and upload image
@@ -35,6 +36,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{env.sha_short}}
         run: |
+          aws s3 sync s3://gohub-environments-files/evershop/${{env.ENV_S3_CONFIG}}/config config
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f Dockerfile .
 
       - name: Push Image production
