--- a/.github/workflows/upload_ecr.yml
+++ b/.github/workflows/upload_ecr.yml
@@ -26,6 +26,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGIONS }}
+      - name: Sync config
+        run: |
+          aws s3 cp --recursive s3://gohub-environments-files/evershop/${{env.ENV_S3_CONFIG}}/config config
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -36,17 +39,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{env.sha_short}}
         run: |
-          aws s3 sync s3://gohub-environments-files/evershop/${{env.ENV_S3_CONFIG}}/config config
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f Dockerfile .
-
-      - name: Push Image production
-        if: github.ref == 'refs/heads/master'
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{env.sha_short}}
-        run: |
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - name: Push Image dev
         if: github.ref == 'refs/heads/develop'
         env:
@@ -55,3 +48,11 @@ jobs:
         run: |
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG-dev-latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:dev-latest
+      - name: Push Image production
+        if: github.ref == 'refs/heads/master'
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{env.sha_short}}
+        run: |
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
