--- a/.github/workflows/upload_ecr.yml
+++ b/.github/workflows/upload_ecr.yml
@@ -37,13 +37,15 @@ jobs:
           IMAGE_TAG: ${{env.sha_short}}
         run: |
           aws s3 cp --recursive s3://gohub-environments-files/evershop/${{env.ENV_S3_CONFIG}}/config config
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f Dockerfile .
+          docker build -t gohub-ecommerce:latest -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f Dockerfile .
       - name: Push Image dev
         if: github.ref == 'refs/heads/develop'
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{env.sha_short}}
         run: |
+          docker tag gohub-ecommerce:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG-dev-latest
+          docker tag gohub-ecommerce:latest $ECR_REGISTRY/$ECR_REPOSITORY:dev-latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG-dev-latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:dev-latest
       - name: Push Image production
