--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   },
   "dependencies": {
     "@evershop/evershop": "^1.1.0",
-    "he": "^1.2.0"
+    "crypto-js": "^4.2.0",
+    "geoip-lite": "^1.4.10",
+    "https": "^1.0.0"
   }
 }
