--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
   "dependencies": {
     "@evershop/evershop": "^1.1.0",
     "crypto-js": "^4.2.0",
-    "geoip-lite": "^1.4.10",
-    "https": "^1.0.0"
+    "geoip-lite": "^1.4.10"
   }
 }
