--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@evershop/evershop": "^1.1.0",
     "crypto-js": "^4.2.0",
-    "geoip-lite": "^1.4.10"
+    "geoip-lite": "^1.4.10",
+    "short-unique-id": "^5.2.0"
   }
 }
