Update universal link

--- a/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
+++ b/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
@@ -1,12 +1,11 @@
 {
-    "applinks": {
+  "applinks": {
       "apps": [],
       "details": [
         {
-          "appID": "TeamID.BundleID",
-          "paths": ["*"]
+          "appID":"CBXVJL99F6.com.gohub.esim",
+          "paths":[ "*" ]
         }
       ]
-    }
   }
-  
+}
