Update apple-app-site-association file

--- a/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
+++ b/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
@@ -4,7 +4,11 @@
       "details": [
         {
           "appID":"CBXVJL99F6.com.gohub.esim",
-          "paths":[ "*" ]
+          "paths":[ 
+            {
+              "path": "*"
+            } 
+          ]
         }
       ]
   }
