Refactor universal link file

--- a/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
+++ b/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
@@ -1,13 +1,13 @@
 {
   "applinks": {
-      "apps": [],
+      "apps": [
+        "CBXVJL99F6.com.gohub.esim"
+      ],
       "details": [
         {
           "appID":"CBXVJL99F6.com.gohub.esim",
           "paths":[ 
-            {
-              "path": "*"
-            } 
+            "*"
           ]
         }
       ]
