update ./well-known file for universal link

--- a/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
+++ b/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
@@ -1,12 +1,10 @@
 {
   "applinks": {
-      "apps": [
-        "CBXVJL99F6.com.gohub.esim"
-      ],
+      "apps": [],
       "details": [
         {
           "appID":"CBXVJL99F6.com.gohub.esim",
-          "paths":[ 
+          "paths":[
             "*"
           ]
         }
