--- a/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
+++ b/extensions/universal_link/pages/frontStore/appleAppSiteAssociation/.well-known.json
@@ -4,7 +4,7 @@
       "details": [
         {
           "appID":"CBXVJL99F6.com.gohub.esim",
-          "paths":["*"]
+          "paths":["*", "/account/login"]
         }
       ]
   }
